=== and the other UPGRADE files for older releases.
===
==============================================================================

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 10 to Asterisk 11 --------------------
------------------------------------------------------------------------------

SIP Changes
-----------
 * Asterisk will no longer substitute CID number for CID name into display
   name field if CID number exists without a CID name. This change improves
   compatibility with certain device features such as Avaya IP500's directory
   lookup service.

Chan_local changes
------------------
 * Added a manager event "LocalBridge" for local channel call bridges between
   the two pseudo-channels created.

Codec changes
-------------
 * Codec lists may now be modified by the '!' character, to allow succinct
   specification of a list of codecs allowed and disallowed, without the
   requirement to use two different keywords.  For example, to specify all
   codecs except g729 and g723, one need only specify allow=all,!g729,!g723.

Queue changes
-------------
 * Added queue options autopausebusy and autopauseunavail for automatically
   pausing a queue member when their device reports busy or congestion.

CDR postgresql driver changes
-----------------------------
 * Added command "cdr show pgsql status" to check connection status

AMI (Asterisk Manager Interface) changes
----------------------------------------
 * Originate now generates an error response if the extension given
   is not found in the dialplan

FAX changes
-----------
 * FAXOPT(faxdetect) will enable a generic fax detect framehook for dialplan
   control of faxdetect.

DUNDi changes
-------------
 * Allow the built in variables ${NUMBER}, ${IPADDR} and ${SECRET} to be
   used within the dynamic weight attribute when specifying a mapping.

------------------------------------------------------------------------------